<resources>
    <string name="app_name">TODOList</string>
    <string name="welcome">Bienvenido</string>
    <string name="category">Categorias</string>
    <string name="other">Otros</string>
    <string name="business">Negocios</string>
    <string name="personal">Personal</string>
    <string name="task">Tareas</string>
    <string name="hint">Añade la tarea</string>
    <string name="dialog_business">Negocios</string>
    <string name="dialog_personal">Personal</string>
    <string name="dialog_other">Otros</string>
    <string name="dialog_add_task">Crear tarea</string>
</resources>